# dotini

./: .gitignore  Cargo.toml  README.md
example/: Cargo.toml
example/src/: config.ini  main.rs
src/: ini.pest  lib.rs
